chore: update spring boot to v3.3.10
Issue-ID: PORTALNG-140
Change-Id: Iaebc95a4df816623449d0f864e83cf98e058b39c
Signed-off-by: benzelleroehr <ben.zelleroehr@telekom.de>